changed css everywhere, for pointer, upload image was too big and now it is the correct size, title is next to logo and dissapears when shrinks

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -32,12 +32,13 @@
   }
 
   a {
-    color: white;
-    transition: color ease-in-out 0.3s;
+    color: black;
+    text-decoration: none;
   }
   
   a:hover {
-    text-decoration: none;
+    color: black;
+    font-size: larger;
   }
   
   a:hover i {
