--- a/src/styles/Asset.module.css
+++ b/src/styles/Asset.module.css
@@ -5,3 +5,11 @@
     align-items: center;
     min-height: 120px;
   }
+
+.Asset img {
+  height: 80px;
+}
+
+.Asset:hover {
+  cursor: pointer;
+}
